src/main/java/com/example/backend/common/error/ConflictException.java
package com.example.backend.common.error;

public class ConflictException {
}
